@@ -9,16 +9,18 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Math-EllipticCurve-Prime
+recommends:
+  Math::BigInt::GMP: 0
 requires:
   List::Util: 0
   Math::BigInt: 1.78
   perl: 5.006002
   strict: 0
   warnings: 0
-version: 0.002
+version: 0.003
