@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution Math-EllipticCurve-Prime,
-version 0.002:
+version 0.003:
 
   elliptic curve operations over prime fields
 
