@@ -4,9 +4,11 @@ license = Perl_5
 copyright_holder = brian m. carlson
 copyright_year   = 2013
 
-version = 0.002
+version = 0.003
 
 [@Basic]
 [AutoPrereqs]
 [PodWeaver]
 [PkgVersion]
+[Prereqs / RuntimeRecommends]
+Math::BigInt::GMP = 0
