@@ -8,7 +8,7 @@ use strict;
 use Test::More tests => 6 * 1 + 1;
 use Test::NoWarnings;
 
-use Math::BigInt try => 'GMP';
+use Math::BigInt try => 'GMP,FastCalc';
 use Math::EllipticCurve::Prime;
 use Math::EllipticCurve::Prime::Point;
 
